# localAiAgent-Rag-

./: .gitignore  Modelfile  README.md  README_KURULUM.md  enhanced_test.py  fine_tune_samples.json  helpers.py  main.py  pyproject.toml  requirements.txt  run-toml.sh  run_inspareai.sh  setup.py  streamlit_app.py  test_mini.py  test_streaming.py  vector.py
inspareai/: __init__.py
scripts/: build_vectordb.py  install_dependencies.sh  run_inspareai.sh
tests/: test_import.py  test_modular.py  test_streamlit.py
transcripts/: --bNoqYrwvg - RUSYA UKRAYNA'YA İZİN Mİ VERDİ？ YOKSA...!!!.txt  -0THnVQ0RO0 - III.DÜNYA SAVAŞINA HAZIRLIK MI？ KISMİ SEFERBERLİK DEĞİL TEMİZLİK OPERASYONU....txt  -4E3dplhfyI - Metafizik Uzmanlığı 101.txt  -MgaYRw5wmc - GEOMETRİ VE YARATILIŞ ARASINDAKİ İLİŞKİ.txt  -Pgl5RvaUYE - GELECEĞİN TÜRKİYE'SİNE HAZIR MISIN？.txt  -XnKqBsVjtU - TÜRKİYE’DE ÇİP KONUŞANLAR, HENÜZ SİLİKON VADİSİ'Nİ GÖRMEDİ!.txt  -Z5YAJQ42VI - “Ya Şehadet Ya Zafer” Ne Yapacağız Konferansı #bağcılar #kitaptayazmaz #cüneytsezer.txt  -g0dtD8xHTc - IRAK İÇİN YAPILAN HİÇBİR PLAN İŞLEMEYECEK! OYUNU KİMİN KURDUĞUNU KİMSE BİLMİYOR....txt  -kmGPoHLIQY - ADA ABİ KİMDİR？.txt  -ln9lLVhAtA - BURSA KONFERANSI; GELECEĞİN TÜRKİYESİ 'SEVGİ' #3.txt  -nEgAESoNFw - GÖK MEKANİĞİNİN İNSAN ÜZERİNDEKİ ETKİLERİ.txt  -qvEDnQAuAA - SABAHA KADAR UYUMAMAK....txt  -r2u0as4d9o - RUSYA'DA NELER OLUYOR？ NÜKLEER OLMAYAN SAVAŞA DOĞRU MU GİDİYORUZ？.txt  -w5DxlOnJdA - DİNSİZ AHLAK OLUR MU？.txt  -z06TNpkxV0 - İlaç Mafyası - BigPharma -.txt  01jdP4Xmu44 - ALEVİLİK MEZHEP Mİ KÜLTÜR MÜ DİN Mİ？.txt  03ERhBsZ0qM - SALDIRI NEDEN KİLİSEDE YAPILDI？.txt  06v-5nEOGsc - İstanbul Taşınıyor ! Marmara Depremi Bekleniyor mu？.txt  (+720 more)
(+20 files in other folders)
